# GMLang

./: CHANGELOG.md  README.md  generate_representation.sh  main.py  pyproject.toml
.github/workflows/: generate_diagram.yml  pytest.yml
gmlang/: __init__.py  obj_processors.py
gmlang/common/: types.py
gmlang/grammar/: common.tx  expression.tx  grammar.tx  graph_context.tx  graph_definition.tx
gmlang/graph/: graph.py  json_encoder.py
gmlang/interpreter/: basic.py  utils.py
grammar/: grammar.tx  graph_definition.tx
tests/: conftest.py  test_connecting.py  test_context.py  test_creation_and_conn.py  test_graph.py  test_hyperedge.py  test_let_and_as.py  test_node_creation.py
tests/interpreter/: test_basic.py
tests/interpreter/__snapshots__/: test_basic.ambr
tests/output/test_basic/: test_basic.txt  test_connection_types.txt  test_hyperedge_chain.txt  test_hyperedge_connections.txt  test_infix_connections.txt
